tests with Constructor<T>